--- a/src/pages/home/Home.module.css
+++ b/src/pages/home/Home.module.css
@@ -1,10 +1,16 @@
-.content {
+.home {
   display: flex;
   align-items: center;
   justify-content: center;
   height: 100vh;
   flex-direction: column;
   gap: 1rem;
+}
+
+.content {
+  display: flex;
+  gap: 1rem;
+  flex-direction: column;
 }
 
 .title {
