--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -4,4 +4,10 @@
   padding-left: 5rem;
   box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.1);
   top: 0;
+  display: flex;
+
+  @media (max-width: 992px) {
+    padding-left: 0rem;
+    justify-content: center;
+  }
 }
