--- a/src/components/header/Header.module.css
+++ b/src/components/header/Header.module.css
@@ -1,13 +1,9 @@
 .header {
   position: fixed;
   width: 100%;
-  padding-left: 5rem;
   box-shadow: 4px 4px 4px 0px rgba(0, 0, 0, 0.1);
   top: 0;
   display: flex;
-
-  @media (max-width: 992px) {
-    padding-left: 0rem;
-    justify-content: center;
-  }
+  align-items: center;
+  justify-content: space-around;
 }
