Add background image for both dark and light theme

--- a/src/components/footer/Footer.module.css
+++ b/src/components/footer/Footer.module.css
@@ -4,7 +4,7 @@
   position: absolute;
   bottom: 0;
   flex-direction: column;
-  border-top: 1px solid #bcccdc;
+  border-top: 1px solid white;
   width: 100%;
   padding: 1rem;
   gap: 0.5rem;
